// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jobs.check.flatten should correctly process HYD_ZON_BassVers_Rade_compl_s 1`] = `
Object {
  "ignored": Array [],
  "links": Object {
    "https://applications002.brest-metropole.fr/VIPDU72/GPB/HYD_ZON_BassVers_Rade_compl_s.zip": Object {
      "bundles": Array [
        Object {
          "changed": 9,
          "files": Array [
            Object {
              "analyzed": true,
              "digest": "sha384-a81Czi0DMyjdFLO2qDKJj4WM9RdSPsH301M/oTcWclPXT+lzIHQe6OkXxP3fqtHA",
              "fileName": "HYD_ZON_BassVers_Rade_compl_s.shp",
              "filePath": "HYD_ZON_BassVers_Rade_compl_s.zip/HYD_ZON_BassVers_Rade_compl_s.shp",
              "fileSize": 232164,
              "fileTypes": Array [
                Object {
                  "ext": "shp",
                  "mime": false,
                  "source": "path:filename",
                },
              ],
              "fromUrl": "https://applications002.brest-metropole.fr/VIPDU72/GPB/HYD_ZON_BassVers_Rade_compl_s.zip",
              "inputType": "path",
              "path": "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_cCZ3Ug/_unarchived/HYD_ZON_BassVers_Rade_compl_s.shp",
              "type": "file",
            },
            Object {
              "analyzed": true,
              "digest": "sha384-yrZQ9NCRVOcfAB1mtzjinEi2XP1B2g3NkXaQ59S0R8Oh8HevZUR6dq960k5Y29Gw",
              "fileName": "HYD_ZON_BassVers_Rade_compl_s.cpg",
              "filePath": "HYD_ZON_BassVers_Rade_compl_s.zip/HYD_ZON_BassVers_Rade_compl_s.cpg",
              "fileSize": 5,
              "fileTypes": Array [
                Object {
                  "ext": "cpg",
                  "mime": false,
                  "source": "path:filename",
                },
              ],
              "fromUrl": "https://applications002.brest-metropole.fr/VIPDU72/GPB/HYD_ZON_BassVers_Rade_compl_s.zip",
              "inputType": "path",
              "path": "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_cCZ3Ug/_unarchived/HYD_ZON_BassVers_Rade_compl_s.cpg",
              "type": "file",
            },
            Object {
              "analyzed": true,
              "digest": "sha384-HNgRMoBEqK3/SI3LJVuUTdEYluGIUNYKKtLC/B1Al8KGCZOcjiRrsd7/uuKjezRm",
              "fileName": "HYD_ZON_BassVers_Rade_compl_s.dbf",
              "filePath": "HYD_ZON_BassVers_Rade_compl_s.zip/HYD_ZON_BassVers_Rade_compl_s.dbf",
              "fileSize": 9122,
              "fileTypes": Array [
                Object {
                  "ext": "dbf",
                  "mime": false,
                  "source": "path:filename",
                },
              ],
              "fromUrl": "https://applications002.brest-metropole.fr/VIPDU72/GPB/HYD_ZON_BassVers_Rade_compl_s.zip",
              "inputType": "path",
              "path": "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_cCZ3Ug/_unarchived/HYD_ZON_BassVers_Rade_compl_s.dbf",
              "type": "file",
            },
            Object {
              "analyzed": true,
              "digest": "sha384-l0OBnMIirew9MrhR0OcJh1WZEuMd2k+h1eRVu3f4mxW7L2Gu0UVY8LOUX/nEXbna",
              "fileName": "HYD_ZON_BassVers_Rade_compl_s.lyr",
              "filePath": "HYD_ZON_BassVers_Rade_compl_s.zip/HYD_ZON_BassVers_Rade_compl_s.lyr",
              "fileSize": 7680,
              "fileTypes": Array [
                Object {
                  "ext": "msi",
                  "mime": "application/x-msi",
                  "source": "path:chunk",
                },
                Object {
                  "ext": "lyr",
                  "mime": false,
                  "source": "path:filename",
                },
              ],
              "fromUrl": "https://applications002.brest-metropole.fr/VIPDU72/GPB/HYD_ZON_BassVers_Rade_compl_s.zip",
              "inputType": "path",
              "path": "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_cCZ3Ug/_unarchived/HYD_ZON_BassVers_Rade_compl_s.lyr",
              "type": "file",
            },
            Object {
              "analyzed": true,
              "digest": "sha384-Nbb1qvYtn5QKJpEZXaMOurKSMOK/v8g2IQTG25BoNQIJ+iEk0vWEo89AP9jpchoa",
              "fileName": "HYD_ZON_BassVers_Rade_compl_s.prj",
              "filePath": "HYD_ZON_BassVers_Rade_compl_s.zip/HYD_ZON_BassVers_Rade_compl_s.prj",
              "fileSize": 452,
              "fileTypes": Array [
                Object {
                  "ext": "prj",
                  "mime": false,
                  "source": "path:filename",
                },
              ],
              "fromUrl": "https://applications002.brest-metropole.fr/VIPDU72/GPB/HYD_ZON_BassVers_Rade_compl_s.zip",
              "inputType": "path",
              "path": "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_cCZ3Ug/_unarchived/HYD_ZON_BassVers_Rade_compl_s.prj",
              "type": "file",
            },
            Object {
              "analyzed": true,
              "digest": "sha384-OrdG6F1SvjqHRy32JPmuyQ/lpMwxgA022zFC495OrcUEBDTN+IQApiVolj/jysci",
              "fileName": "HYD_ZON_BassVers_Rade_compl_s.sbn",
              "filePath": "HYD_ZON_BassVers_Rade_compl_s.zip/HYD_ZON_BassVers_Rade_compl_s.sbn",
              "fileSize": 1100,
              "fileTypes": Array [
                Object {
                  "ext": "sbn",
                  "mime": false,
                  "source": "path:filename",
                },
              ],
              "fromUrl": "https://applications002.brest-metropole.fr/VIPDU72/GPB/HYD_ZON_BassVers_Rade_compl_s.zip",
              "inputType": "path",
              "path": "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_cCZ3Ug/_unarchived/HYD_ZON_BassVers_Rade_compl_s.sbn",
              "type": "file",
            },
            Object {
              "analyzed": true,
              "digest": "sha384-HzSR2zoMgAI3ERb6eqv3Q+vVSGqnPp4i37gozO7CSXMymZFFy5uRrw29TV/VlSlh",
              "fileName": "HYD_ZON_BassVers_Rade_compl_s.sbx",
              "filePath": "HYD_ZON_BassVers_Rade_compl_s.zip/HYD_ZON_BassVers_Rade_compl_s.sbx",
              "fileSize": 212,
              "fileTypes": Array [
                Object {
                  "ext": "sbx",
                  "mime": false,
                  "source": "path:filename",
                },
              ],
              "fromUrl": "https://applications002.brest-metropole.fr/VIPDU72/GPB/HYD_ZON_BassVers_Rade_compl_s.zip",
              "inputType": "path",
              "path": "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_cCZ3Ug/_unarchived/HYD_ZON_BassVers_Rade_compl_s.sbx",
              "type": "file",
            },
            Object {
              "analyzed": true,
              "digest": "sha384-l0/ZWOc8uKD4ltaKQVcz7Yg3r05QBAJGxWAnAcgyd5lD8tzbMBcIvJezQiv1lgQ0",
              "fileName": "HYD_ZON_BassVers_Rade_compl_s.shp.xml",
              "filePath": "HYD_ZON_BassVers_Rade_compl_s.zip/HYD_ZON_BassVers_Rade_compl_s.shp.xml",
              "fileSize": 15029,
              "fileTypes": Array [
                Object {
                  "ext": "xml",
                  "mime": "application/xml",
                  "source": "path:filename",
                },
              ],
              "fromUrl": "https://applications002.brest-metropole.fr/VIPDU72/GPB/HYD_ZON_BassVers_Rade_compl_s.zip",
              "inputType": "path",
              "path": "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_cCZ3Ug/_unarchived/HYD_ZON_BassVers_Rade_compl_s.shp.xml",
              "type": "file",
            },
            Object {
              "analyzed": true,
              "digest": "sha384-EpxwLDdYG9mDRaeldP4EXAYa0+g8scEbgheOexa6bp7wOxg1vWXzrTBJkKidR3Ji",
              "fileName": "HYD_ZON_BassVers_Rade_compl_s.shx",
              "filePath": "HYD_ZON_BassVers_Rade_compl_s.zip/HYD_ZON_BassVers_Rade_compl_s.shx",
              "fileSize": 868,
              "fileTypes": Array [
                Object {
                  "ext": "shx",
                  "mime": false,
                  "source": "path:filename",
                },
              ],
              "fromUrl": "https://applications002.brest-metropole.fr/VIPDU72/GPB/HYD_ZON_BassVers_Rade_compl_s.zip",
              "inputType": "path",
              "path": "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_cCZ3Ug/_unarchived/HYD_ZON_BassVers_Rade_compl_s.shx",
              "type": "file",
            },
          ],
          "type": "shp",
        },
        Object {
          "changed": 1,
          "files": Array [
            Object {
              "analyzed": true,
              "digest": "sha384-42ytPduwa/qtWDIUK+ldw/rfi1ZOITDJmIknCyKIZous7//KS/OLErs4IRuE6DHQ",
              "fileName": "HYD_ZON_BassVers_Rade_compl_s.pdf",
              "filePath": "HYD_ZON_BassVers_Rade_compl_s.zip/HYD_ZON_BassVers_Rade_compl_s.pdf",
              "fileSize": 240401,
              "fileTypes": Array [
                Object {
                  "ext": "pdf",
                  "mime": "application/pdf",
                  "source": "path:chunk",
                },
                Object {
                  "ext": "pdf",
                  "mime": "application/pdf",
                  "source": "path:filename",
                },
              ],
              "fromUrl": "https://applications002.brest-metropole.fr/VIPDU72/GPB/HYD_ZON_BassVers_Rade_compl_s.zip",
              "inputType": "path",
              "path": "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_cCZ3Ug/_unarchived/HYD_ZON_BassVers_Rade_compl_s.pdf",
              "type": "file",
            },
          ],
          "type": "document",
        },
      ],
      "errors": Array [],
      "urls": Array [],
      "warnings": Array [],
    },
  },
  "temporaries": Array [
    "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_cCZ3Ug",
  ],
}
`;

exports[`jobs.check.flatten should correctly process N_PERIM_MAET_ZINF_S_R53_2009 1`] = `
Object {
  "ignored": Array [
    Object {
      "analyzed": true,
      "digest": "sha384-gKKOWZTkRXrvTqxwWMjBHASy2BnFJk25+60zDW18WDpHwqfBd/0ga369bbaH8tQ6",
      "fileName": "fr-120066022-jdd-c4fe283f-abce-4c2e-b75f-8ee82fb78cf5.xml",
      "filePath": "dataset-1538645795676.zip/dataset/fr-120066022-jdd-c4fe283f-abce-4c2e-b75f-8ee82fb78cf5.xml",
      "fileSize": 26309,
      "fileTypes": Array [
        Object {
          "ext": "xml",
          "mime": "application/xml",
          "source": "path:chunk",
        },
        Object {
          "ext": "xml",
          "mime": "application/xml",
          "source": "path:filename",
        },
      ],
      "fromUrl": "http://atom.geo-ide.developpement-durable.gouv.fr/atomArchive/GetResource?id=29e549c8-cd91-4e09-8750-941db34dc916&dataType=dataset",
      "inputType": "path",
      "path": "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_uhyNu2/_unarchived/dataset/fr-120066022-jdd-c4fe283f-abce-4c2e-b75f-8ee82fb78cf5.xml",
      "type": "file",
    },
  ],
  "links": Object {
    "http://atom.geo-ide.developpement-durable.gouv.fr/atomArchive/GetResource?id=29e549c8-cd91-4e09-8750-941db34dc916&dataType=dataset": Object {
      "bundles": Array [
        Object {
          "changed": 4,
          "files": Array [
            Object {
              "analyzed": true,
              "digest": "sha384-NbvX0wBc0CPcajtZ/SHaVn6fa/p+4UrPiko110mTD5jLLtCb6oEnEg7BbZhNHl2q",
              "fileName": "N_PERIM_MAET_ZINF_S_R53_2009.TAB",
              "filePath": "dataset-1538645795676.zip/dataset/N_PERIM_MAET_ZINF_S_R53_2009.TAB",
              "fileSize": 446,
              "fileTypes": Array [
                Object {
                  "ext": "TAB",
                  "mime": false,
                  "source": "path:filename",
                },
              ],
              "fromUrl": "http://atom.geo-ide.developpement-durable.gouv.fr/atomArchive/GetResource?id=29e549c8-cd91-4e09-8750-941db34dc916&dataType=dataset",
              "inputType": "path",
              "path": "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_uhyNu2/_unarchived/dataset/N_PERIM_MAET_ZINF_S_R53_2009.TAB",
              "type": "file",
            },
            Object {
              "analyzed": true,
              "digest": "sha384-Z780GZB5hptF9ANSpEEp30oN9O1EoHrKkoZXSAIE4PthCKxCJDAR2kgIFeM9o4Pw",
              "fileName": "N_PERIM_MAET_ZINF_S_R53_2009.DAT",
              "filePath": "dataset-1538645795676.zip/dataset/N_PERIM_MAET_ZINF_S_R53_2009.DAT",
              "fileSize": 12912,
              "fileTypes": Array [
                Object {
                  "ext": "DAT",
                  "mime": false,
                  "source": "path:filename",
                },
              ],
              "fromUrl": "http://atom.geo-ide.developpement-durable.gouv.fr/atomArchive/GetResource?id=29e549c8-cd91-4e09-8750-941db34dc916&dataType=dataset",
              "inputType": "path",
              "path": "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_uhyNu2/_unarchived/dataset/N_PERIM_MAET_ZINF_S_R53_2009.DAT",
              "type": "file",
            },
            Object {
              "analyzed": true,
              "digest": "sha384-9GJxVM1/ARRIfMqjy+FPQeOpvK39S0prtUHyZzl/VagqXlBOuVXDcIaiLS9snPcT",
              "fileName": "N_PERIM_MAET_ZINF_S_R53_2009.ID",
              "filePath": "dataset-1538645795676.zip/dataset/N_PERIM_MAET_ZINF_S_R53_2009.ID",
              "fileSize": 300,
              "fileTypes": Array [
                Object {
                  "ext": "ID",
                  "mime": false,
                  "source": "path:filename",
                },
              ],
              "fromUrl": "http://atom.geo-ide.developpement-durable.gouv.fr/atomArchive/GetResource?id=29e549c8-cd91-4e09-8750-941db34dc916&dataType=dataset",
              "inputType": "path",
              "path": "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_uhyNu2/_unarchived/dataset/N_PERIM_MAET_ZINF_S_R53_2009.ID",
              "type": "file",
            },
            Object {
              "analyzed": true,
              "digest": "sha384-TWSCOZ85t5wXpcFAlC1inpzrUp7x053BYIxPcai1bsimSuFV7ThFAUpK553LrrMF",
              "fileName": "N_PERIM_MAET_ZINF_S_R53_2009.MAP",
              "filePath": "dataset-1538645795676.zip/dataset/N_PERIM_MAET_ZINF_S_R53_2009.MAP",
              "fileSize": 2560000,
              "fileTypes": Array [
                Object {
                  "ext": "MAP",
                  "mime": "application/json",
                  "source": "path:filename",
                },
              ],
              "fromUrl": "http://atom.geo-ide.developpement-durable.gouv.fr/atomArchive/GetResource?id=29e549c8-cd91-4e09-8750-941db34dc916&dataType=dataset",
              "inputType": "path",
              "path": "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_uhyNu2/_unarchived/dataset/N_PERIM_MAET_ZINF_S_R53_2009.MAP",
              "type": "file",
            },
          ],
          "type": "tab",
        },
      ],
      "errors": Array [],
      "urls": Array [],
      "warnings": Array [],
    },
  },
  "temporaries": Array [
    "/var/folders/wb/4xx5dj9j0r12lym3mgxhj0l00000gn/T/plunger_uhyNu2",
  ],
}
`;

exports[`jobs.check.flatten should flatten a shapefile in an index-of 1`] = `
Object {
  "ignored": Array [],
  "links": Object {
    "http://foo": Object {
      "bundles": Array [
        Object {
          "changed": 2,
          "files": Array [
            Object {
              "fileName": "foo.shp",
              "fileTypes": Array [
                Object {
                  "ext": "shp",
                },
              ],
              "type": "file",
              "url": "http://foo/1.shp",
            },
            Object {
              "fileName": "foo.shx",
              "fileTypes": Array [
                Object {
                  "ext": "shx",
                },
              ],
              "type": "file",
              "url": "http://foo/1.shx",
            },
          ],
          "type": "shp",
        },
      ],
      "errors": Array [],
      "urls": Array [
        "http://foo/1.shp",
        "http://foo/1.shx",
      ],
      "warnings": Array [],
    },
    "http://foo/1.shp": Object {
      "bundles": Array [],
      "errors": Array [],
      "urls": Array [],
      "warnings": Array [],
    },
    "http://foo/1.shx": Object {
      "bundles": Array [],
      "errors": Array [],
      "urls": Array [],
      "warnings": Array [],
    },
  },
  "temporaries": Array [],
}
`;

exports[`jobs.check.flatten should not consider related files as main when they also have the main type 1`] = `
Object {
  "ignored": Array [],
  "links": Object {
    "http://foo": Object {
      "bundles": Array [
        Object {
          "changed": 2,
          "files": Array [
            Object {
              "fileName": "file.tiff",
              "fileTypes": Array [
                Object {
                  "ext": "tiff",
                },
              ],
              "type": "file",
              "url": "http://foo/file.tiff",
            },
            Object {
              "fileName": "file.ovr",
              "fileTypes": Array [
                Object {
                  "ext": "ovr",
                },
                Object {
                  "ext": "tiff",
                },
              ],
              "type": "file",
              "url": "http://foo/file.ovr",
            },
          ],
          "type": "tiff",
        },
      ],
      "errors": Array [],
      "urls": Array [
        "http://foo/file.tiff",
        "http://foo/file.ovr",
      ],
      "warnings": Array [],
    },
    "http://foo/file.ovr": Object {
      "bundles": Array [],
      "errors": Array [],
      "urls": Array [],
      "warnings": Array [],
    },
    "http://foo/file.tiff": Object {
      "bundles": Array [],
      "errors": Array [],
      "urls": Array [],
      "warnings": Array [],
    },
  },
  "temporaries": Array [],
}
`;

exports[`jobs.check.flatten should return a sole shapefile in an index-of 1`] = `
Object {
  "ignored": Array [],
  "links": Object {
    "http://foo": Object {
      "bundles": Array [],
      "errors": Array [],
      "urls": Array [
        "http://foo/1.shp",
      ],
      "warnings": Array [],
    },
    "http://foo/1.shp": Object {
      "bundles": Array [
        Object {
          "changed": 1,
          "files": Array [
            Object {
              "fileName": "foo.shp",
              "fileTypes": Array [
                Object {
                  "ext": "shp",
                },
              ],
              "type": "file",
              "url": "http://foo/1.shp",
            },
          ],
          "type": "shp",
        },
      ],
      "errors": Array [],
      "urls": Array [],
      "warnings": Array [],
    },
  },
  "temporaries": Array [],
}
`;

exports[`jobs.check.flatten should return multiple bundles with similar extensions 1`] = `
Object {
  "ignored": Array [],
  "links": Object {
    "http://foo": Object {
      "bundles": Array [
        Object {
          "changed": 2,
          "files": Array [
            Object {
              "fileName": "file1.shp",
              "fileTypes": Array [
                Object {
                  "ext": "shp",
                },
              ],
              "type": "file",
              "url": "http://foo/file1.shp",
            },
            Object {
              "fileName": "file1.dbf",
              "fileTypes": Array [
                Object {
                  "ext": "dbf",
                },
              ],
              "type": "file",
              "url": "http://foo/file1.dbf",
            },
          ],
          "type": "shp",
        },
      ],
      "errors": Array [],
      "urls": Array [
        "http://foo/file1.shp",
        "http://foo/file1.dbf",
        "http://foo/file2.dbf",
      ],
      "warnings": Array [],
    },
    "http://foo/file1.dbf": Object {
      "bundles": Array [],
      "errors": Array [],
      "urls": Array [],
      "warnings": Array [],
    },
    "http://foo/file1.shp": Object {
      "bundles": Array [],
      "errors": Array [],
      "urls": Array [],
      "warnings": Array [],
    },
    "http://foo/file2.dbf": Object {
      "bundles": Array [
        Object {
          "changed": 1,
          "files": Array [
            Object {
              "fileName": "file2.dbf",
              "fileTypes": Array [
                Object {
                  "ext": "dbf",
                },
              ],
              "type": "file",
              "url": "http://foo/file2.dbf",
            },
          ],
          "type": "dbf",
        },
      ],
      "errors": Array [],
      "urls": Array [],
      "warnings": Array [],
    },
  },
  "temporaries": Array [],
}
`;

exports[`jobs.check.flatten should return the file for a simple document 1`] = `
Object {
  "ignored": Array [],
  "links": Object {
    "http://foo": Object {
      "bundles": Array [
        Object {
          "changed": 1,
          "files": Array [
            Object {
              "fileTypes": Array [
                Object {
                  "ext": "doc",
                },
              ],
              "type": "file",
              "url": "http://foo",
            },
          ],
          "type": "document",
        },
      ],
      "errors": Array [],
      "urls": Array [],
      "warnings": Array [],
    },
  },
  "temporaries": Array [],
}
`;

exports[`jobs.check.flatten should support ignored files types 1`] = `
Object {
  "ignored": Array [
    Object {
      "fileTypes": Array [
        Object {
          "ext": "unknown stuff",
        },
      ],
      "type": "file",
      "url": "http://foo",
    },
  ],
  "links": Object {
    "http://foo": Object {
      "bundles": Array [],
      "errors": Array [],
      "urls": Array [],
      "warnings": Array [],
    },
  },
  "temporaries": Array [],
}
`;
